// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mdat placeholder comment expansion > should expand comments 1`] = `
"# The MDAT sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Basic comment clean up

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

# The MDAT sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Basic comment clean up

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

I was generated from test-rules.ts

<!-- /basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

- I
- am
- a
- list
- that
- must
- be
- here

<!-- /basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Same expansion with different options

<!-- basic-options({prefix: "🌳 ", suffix: " 🌳"}) -->

🌳 I am between two ferns 🌳

<!-- /basic-options -->

## Expansions with arguments, syntax forgiveness

<!--- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--config ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

<!-- basic-empty -->

<!-- /basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

<!-- basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered-2 -->

I had to be last

<!-- /basic-ordered-2 -->

<!-- basic-ordered-1 -->

I had to be first

<!-- /basic-ordered-1 -->

## Inline expansions with paragraph elements

This is a sentence with a "_<!-- basic-inline -->test-rules.ts<!-- /basic-inline -->_" inside of it.

## Multiple paragraphs

<!-- basic-multiple-paragraphs -->

I am a paragraph 1

I am a paragraph 2

I am a paragraph 3

<!-- /basic-multiple-paragraphs -->

## Multiple paragraphs blockquote

> <!-- basic-multiple-paragraphs -->
>
> I am a paragraph 1
>
> I am a paragraph 2
>
> I am a paragraph 3
>
> <!-- /basic-multiple-paragraphs -->

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><b>Absolutely</b><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with options

<!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->🪴 I am between two ferns 🪴<!-- /basic-options --><!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->🪴 I am between two ferns 🪴<!-- /basic-options -->

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Adjacent top-level expansions with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic --><!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Expansion with leading space

&#x20;<!-- basic -->**A bold statement from test-rules.ts**<!-- /basic -->

## Comments nested in HTML

<em>

<!-- basic -->

**A bold statement from test-rules.ts**

<!-- /basic -->

</em>
"
`;

exports[`mdat placeholder comment expansion > should produce snapshot-stable output 1`] = `
"# The MDAT sample document

## Basic comment expansion

**A bold statement from test-rules.ts**

## Basic comment clean up

**A bold statement from test-rules.ts**

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

## Comment expansion with dynamic content

Shows the name of the rules file:

# The MDAT sample document

## Basic comment expansion

**A bold statement from test-rules.ts**

## Basic comment clean up

**A bold statement from test-rules.ts**

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

## Comment expansion with dynamic content

Shows the name of the rules file:

I was generated from test-rules.ts

## Required expansion

Inclusion is validated via \`--check\` option

- I
- am
- a
- list
- that
- must
- be
- here

## Expansions with options argument, canonical syntax

🪴 I am between two ferns 🪴

## Same expansion with different options

🌳 I am between two ferns 🌳

## Expansions with arguments, syntax forgiveness

🪴 I am between two ferns 🪴

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--config ./package.json\`, allow access to fields in the file:

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

## Ordered expansion

Order in the document is validated via \`--check\` option

I had to be last

I had to be first

## Inline expansions with paragraph elements

This is a sentence with a "_test-rules.ts_" inside of it.

## Multiple paragraphs

I am a paragraph 1

I am a paragraph 2

I am a paragraph 3

## Multiple paragraphs blockquote

> I am a paragraph 1
>
> I am a paragraph 2
>
> I am a paragraph 3

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

**A bold statement from test-rules.ts**

**A bold statement from test-rules.ts**

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A**A bold statement from test-rules.ts****A bold statement from test-rules.ts**Z

## Adjacent top-level expansions

\\*\\*A bold statement from test-rules.ts\\*\\*\\*\\*A bold statement from test-rules.ts\\*\\*Z

## Adjacent top-level expansions

\\*\\*A bold statement from test-rules.ts\\*\\*<b>Absolutely</b>\\*\\*A bold statement from test-rules.ts\\*\\*

## Adjacent top-level expansions with options

🪴 I am between two ferns 🪴🪴 I am between two ferns 🪴

## Adjacent top-level expansions

\\*\\*A bold statement from test-rules.ts\\*\\*\\*\\*A bold statement from test-rules.ts\\*\\*

## Adjacent top-level expansions with leading space

&#x20;**A bold statement from test-rules.ts****A bold statement from test-rules.ts**

## Expansion with leading space

&#x20;**A bold statement from test-rules.ts**

## Comments nested in HTML

<em>

**A bold statement from test-rules.ts**

</em>
"
`;

exports[`mdat placeholder comment expansion > should report an error and switch to defaults if rule set is invalid 1`] = `
"# The MDAT sample document

## Basic comment expansion

<!-- basic -->

## Basic comment clean up

<!-- basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

# The MDAT sample document

## Basic comment expansion

<!-- basic -->

## Basic comment clean up

<!-- basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Same expansion with different options

<!-- basic-options({prefix: "🌳 ", suffix: " 🌳"}) -->

## Expansions with arguments, syntax forgiveness

<!--- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--config ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

<!-- basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

<!-- basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered-2 -->

<!-- basic-ordered-1 -->

## Inline expansions with paragraph elements

This is a sentence with a "_<!-- basic-inline -->_" inside of it.

## Multiple paragraphs

<!-- basic-multiple-paragraphs -->

## Multiple paragraphs blockquote

> <!-- basic-multiple-paragraphs -->

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

<!-- basic -->

<!-- basic -->

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A<!-- basic --><!-- basic -->Z

## Adjacent top-level expansions

<!-- basic --><!-- basic -->Z

## Adjacent top-level expansions

<!-- basic --><b>Absolutely</b><!-- basic -->

## Adjacent top-level expansions with options

<!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) --><!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Adjacent top-level expansions

<!-- basic --><!-- basic -->

## Adjacent top-level expansions with leading space

&#x20;<!-- basic --><!-- basic -->

## Expansion with leading space

&#x20;<!-- basic -->

## Comments nested in HTML

<em>

<!-- basic -->

</em>
"
`;

exports[`mdat placeholder comment expansion > should work with arbitrary json files 1`] = `
"# The MDAT sample document

## Basic comment expansion

<!-- basic -->

## Basic comment clean up

<!-- basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

# The MDAT sample document

## Basic comment expansion

<!-- basic -->

## Basic comment clean up

<!-- basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Same expansion with different options

<!-- basic-options({prefix: "🌳 ", suffix: " 🌳"}) -->

## Expansions with arguments, syntax forgiveness

<!--- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--config ./package.json\`, allow access to fields in the file:

<!--- name -->

mdat

<!-- /name -->

<!--- author.name -->

Eric Mika

<!-- /author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

<!-- basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

<!-- basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered-2 -->

<!-- basic-ordered-1 -->

## Inline expansions with paragraph elements

This is a sentence with a "_<!-- basic-inline -->_" inside of it.

## Multiple paragraphs

<!-- basic-multiple-paragraphs -->

## Multiple paragraphs blockquote

> <!-- basic-multiple-paragraphs -->

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

<!-- basic -->

<!-- basic -->

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A<!-- basic --><!-- basic -->Z

## Adjacent top-level expansions

<!-- basic --><!-- basic -->Z

## Adjacent top-level expansions

<!-- basic --><b>Absolutely</b><!-- basic -->

## Adjacent top-level expansions with options

<!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) --><!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Adjacent top-level expansions

<!-- basic --><!-- basic -->

## Adjacent top-level expansions with leading space

&#x20;<!-- basic --><!-- basic -->

## Expansion with leading space

&#x20;<!-- basic -->

## Comments nested in HTML

<em>

<!-- basic -->

</em>
"
`;

exports[`mdat placeholder comment expansion > should work with hand-crafted json rules 1`] = `
"# The MDAT sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules-json.json**

<!-- /basic -->

## Basic comment clean up

<!-- basic -->

**A bold statement from test-rules-json.json**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

# The MDAT sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules-json.json**

<!-- /basic -->

## Basic comment clean up

<!-- basic -->

**A bold statement from test-rules-json.json**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm-\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

- I
- am
- a
- list
- that
- must
- be
- here

<!-- /basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Same expansion with different options

<!-- basic-options({prefix: "🌳 ", suffix: " 🌳"}) -->

## Expansions with arguments, syntax forgiveness

<!--- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--config ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MDAT will report the error.

<!-- basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MDAT will report the error.

<!-- basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered-2 -->

<!-- basic-ordered-1 -->

## Inline expansions with paragraph elements

This is a sentence with a "_<!-- basic-inline -->_" inside of it.

## Multiple paragraphs

<!-- basic-multiple-paragraphs -->

## Multiple paragraphs blockquote

> <!-- basic-multiple-paragraphs -->

## Tags in code fence

Should not expand

\`\`\`html
<!-- basic -->
\`\`\`

## Stacked expansions

<!-- basic -->

**A bold statement from test-rules-json.json**

<!-- /basic -->

<!-- basic -->

**A bold statement from test-rules-json.json**

<!-- /basic -->

The following required an extra step to split html statements that were being interpreted as contiguous

## Adjacent inline expansions

A<!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic --><!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic --><!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic -->Z

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic --><b>Absolutely</b><!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic -->

## Adjacent top-level expansions with options

<!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) --><!-- basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Adjacent top-level expansions

<!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic --><!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic -->

## Adjacent top-level expansions with leading space

&#x20;<!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic --><!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic -->

## Expansion with leading space

&#x20;<!-- basic -->**A bold statement from test-rules-json.json**<!-- /basic -->

## Comments nested in HTML

<em>

<!-- basic -->

**A bold statement from test-rules-json.json**

<!-- /basic -->

</em>
"
`;
